nats-micro/tests/ui/v5_live_test_requires_feature.rs
#[nats_micro::live_test]
async fn needs_live_test() -> nats_micro::Result<()> {
    Ok(())
}

fn main() {}
